syntax = "proto3";

package proto;
option go_package = "./;api";

service BannersRotator {
    rpc AddBannerToSlot(BannerOperationRequest) returns (BannerOperationResponse);
    rpc RemoveBannerFromSlot(BannerOperationRequest) returns (BannerOperationResponse);
    rpc CountBannerClick(CountBannerClickRequest) returns (BannerOperationResponse);
    rpc SelectBannerForShow(SelectBannerForShowRequest) returns (SelectBannerForShowResponse);
}

message BannerOperationRequest {
    int64 slotId = 1;
    int64 bannerId = 2;
}

message BannerOperationResponse {
    bool success = 1;
}

message CountBannerClickRequest {
    BannerOperationRequest req = 1;
    int64 demGroupId = 2;
}

message SelectBannerForShowRequest {
    int64 slotId = 1;
    int64 demGroupId = 2;
}

message SelectBannerForShowResponse {
    int64 bannerId = 1;
}